--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "karma": "latest",
     "karma-mocha": "latest",
     "karma-phantomjs-launcher": "~0.1.0",
+    "karma-firefox-launcher": "^0.1.3",
     "chai": "latest",
     "sinon": "latest",
     "sinon-chai": "latest",
