--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "karma-phantomjs-launcher": "~0.1.0",
     "karma-firefox-launcher": "^0.1.3",
     "chai": "latest",
-    "sinon": "latest",
+    "sinon": "1.10.0",
     "sinon-chai": "latest",
     "grunt-release": "~0.6.0",
     "chai-jquery": "~1.2.1"
